# WebApiMcp

./: .env.example  .gitignore  README.md  pyproject.toml
.run/: server.run.xml
src/webapi_mcp/: auth.py  config.py  server.py  webapi_client.py
